<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_degrade"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/logo"
        android:scaleX="0.5"
        android:scaleY="0.5"
        app:layout_constraintBottom_toTopOf="@+id/editText_loginEmail"
        app:layout_constraintEnd_toEndOf="@+id/editText_loginEmail"
        app:layout_constraintStart_toStartOf="@+id/editText_loginEmail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/editText_loginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_bg_text_view"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_loginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editText_loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/ic_bg_text_view"
        android:hint="@string/palavra_pass"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_loginApp"
        app:layout_constraintEnd_toEndOf="@+id/editText_loginEmail"
        app:layout_constraintStart_toStartOf="@+id/editText_loginEmail"
        app:layout_constraintTop_toBottomOf="@+id/editText_loginEmail" />

    <Button
        android:id="@+id/button_loginApp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/entrar"
        android:textSize="18sp"
        android:background="@drawable/ic_bg_button"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintBottom_toTopOf="@+id/textView_createAccount"
        app:layout_constraintEnd_toEndOf="@+id/editText_loginPassword"
        app:layout_constraintStart_toStartOf="@+id/editText_loginPassword"
        app:layout_constraintTop_toBottomOf="@+id/editText_loginPassword" />

    <TextView
        android:id="@+id/textView_createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/criar_conta"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progressBar_login"
        app:layout_constraintEnd_toEndOf="@+id/button_loginApp"
        app:layout_constraintStart_toStartOf="@+id/button_loginApp"
        app:layout_constraintTop_toBottomOf="@+id/button_loginApp" />

    <ProgressBar
        android:id="@+id/progressBar_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_createAccount"
        app:layout_constraintStart_toStartOf="@+id/textView_createAccount"
        app:layout_constraintTop_toBottomOf="@+id/textView_createAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>