<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_degrade"
    tools:context=".activity.RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/logo"
        android:scaleX="0.5"
        android:scaleY="0.5"
        app:layout_constraintBottom_toTopOf="@+id/editText_registerName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />


    <EditText
        android:id="@+id/editText_registerName"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_bg_text_view"
        android:hint="@string/nome"
        android:inputType="textShortMessage"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_registerEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editText_registerEmail"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_bg_text_view"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_registerPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_registerName" />

    <EditText
        android:id="@+id/editText_registerPassword"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/ic_bg_text_view"
        android:hint="@string/palavra_pass"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_registerUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_registerEmail"
        android:autofillHints="" />

    <Button
        android:id="@+id/button_registerUser"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/ic_bg_button"
        android:text="@string/criar_conta"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_registerPassword" />

    <ProgressBar
        android:id="@+id/progressBar_register"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_registerUser" />

</androidx.constraintlayout.widget.ConstraintLayout>